@@ -16,7 +16,7 @@ mod_icon=logo.png
 # Forge / Minecraft
 version_forge=1.15.1-30.0.36
 version_minecraft=1.15.1
-version_mcp=20200110-mixed-1.15.1
+version_mcp=20200113-mixed-1.15.1
 
 # Mod Dependencies
 version_curios=FORGE-1.15.1-2.0-beta
