@@ -27,3 +27,4 @@ maps have less affixes but they're stronger
 added main hub gui if you want to only have 1 keybind!
 maps now have a quest and loot crate as a reward!
 armor requirements are no longer random (wis or int), now they are always wis and int etc (existing gear will have a change, beware)
+enchanted/renamed items no longer get auto put in bags. Should stop some annoyances
